# rusted-tools

./: .dockerignore  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  VSCODE_USAGE.md  config.toml.example  test-comprehensive.toml  test-config.toml  test-docker-config.toml  test-remote-config.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  sync-homebrew-formula.yml  trivy.yml
Formula/: rusted-tools.rb
docker/: entrypoint.sh
docs/: README.md  REMOTE_MCP_ARCHITECTURE.md  REVERSE_PROXY_EXAMPLE.md
examples/: test-comprehensive.toml  test-config.toml  test-docker-config.toml  test-remote-config.toml
src/: error.rs  lib.rs  main.rs
src/api/: handlers.rs  mcp_sse_service.rs  mod.rs  routes.rs
src/config/: mod.rs  types.rs
src/endpoint/: client_holder.rs  local.rs  manager.rs  mod.rs  registry.rs  remote.rs  traits.rs
src/http/: handlers.rs  mcp_sse_service.rs  mod.rs  routes.rs  sse.rs
src/mcp/: bridge.rs  client.rs  mod.rs  runtime.rs  types.rs
src/proxy/: bridge.rs  client.rs  filter.rs  mod.rs  router.rs
src/routing/: mod.rs  path_router.rs  tool_filter.rs
src/server/: local.rs  manager.rs  mod.rs  registry.rs  remote.rs
tests/: integration_test.rs
tests/common/: mod.rs
