[package]
name = "rusted-tools"
version = "1.0.0"
edition = "2024"
license = "MIT"
authors = ["Michał Kruczek <mikart143@gmail.com>"]
description = "High-performance MCP proxy server for unified access to multiple Model Context Protocol servers"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time", "signal"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.8.8", features = ["json", "macros", "http1", "http2"] }
axum-reverse-proxy = "1.1.1"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

# MCP SDK
rmcp = { version = "0.14", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "transport-streamable-http-server"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
rustls = { version = "0.23", features = ["aws-lc-rs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
config = { version = "0.15.19", features = ["toml"] }

# Error handling
thiserror = "2.0.18"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Utilities
dashmap = "6"
dotenvy = "0.15"

# CLI
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
